@@ -206,6 +206,9 @@
 /* Support NeXT 2-bit RLE algorithm */
 #undef NEXT_SUPPORT
 
+/* Define to 1 if your C compiler doesn't accept -c and -o together. */
+#undef NO_MINUS_C_MINUS_O
+
 /* Support Old JPEG compresson (read-only) */
 #undef OJPEG_SUPPORT
 
